--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
     "core-js": "^3.8.1",
+    "fontsource-roboto": "^3.1.5",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
+    "vuetify": "^2.3.22",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
@@ -25,7 +28,10 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.30.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.12"
+    "sass-loader": "^10.1.0",
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0",
+    "webpack": "^4.44.2"
   }
 }
