--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^5.8.55",
     "core-js": "^3.8.1",
     "fontsource-roboto": "^3.1.5",
+    "lodash": "^4.17.20",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuetify": "^2.3.22",
